Bug 1709832 - Part 1: Do not fire dragenter/leave at text nodes r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D121006